--- a/style.css
+++ b/style.css
@@ -3,28 +3,41 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: hsl(0, 0%, 42%);
+}
+h1 {
+  color: #1fc742;
 }
 
 #calc-container {
   display: flex;
   flex-wrap: wrap;
-  width: 300px;
+  width: 350px;
   border: 2px solid;
   padding: 10px;
   border-radius: 5px;
+  background-color: #0b2447;
+  align-items: center;
+  justify-content: center;
 }
 
 .calc-btn {
   aspect-ratio: 1 / 1;
-  width: 60px;
+  width: 80px;
   border: 1px solid;
   border-radius: 5px;
   font-size: 1.5rem;
+  margin: 3px;
+  background-color: #a5d7e8;
 }
 
 #display-container {
   width: 100%;
-  height: 3.5rem;
-  border: 1px solid;
-  padding: 5px;
+  height: 100px;
+  border: 1px solid black;
+  padding: 10px;
+  font-size: 1.5rem;
+  margin-bottom: 5px;
+  color: #1fc742;
+  background-color: #023612;
 }
