--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: hsl(0, 0%, 42%);
+  background-color: hsl(0, 0%, 77%);
 }
 h1 {
   color: #0b2447;
@@ -20,16 +20,26 @@ h1 {
   border-radius: 5px;
   background-color: #0b2447;
   align-items: center;
-  justify-content: center;
+  justify-content: center; 
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .calc-btn {
   aspect-ratio: 1 / 1;
   width: 70px;
   border: 1px solid;
   border-radius: 5px;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin: 3px;
   background-color: #a5d7e8;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.op-btn {
+  color: #023612;
+}
+
+#backspace, #clear-btn {
+  color: rgb(180, 0, 0);
 }
 
 #display-container {
