--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
 h1 {
   color: #0b2447;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
 }
 
 #calc-container {
@@ -20,8 +19,9 @@ h1 {
   border-radius: 5px;
   background-color: #0b2447;
   align-items: center;
-  justify-content: center; 
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  justify-content: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 .calc-btn {
   aspect-ratio: 1 / 1;
@@ -31,15 +31,22 @@ h1 {
   font-size: 1.8rem;
   margin: 3px;
   background-color: #a5d7e8;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 
 .op-btn {
-  color: #023612;
+  color: #005c73;
+  font-weight: bolder;
 }
 
-#backspace, #clear-btn {
+#backspace,
+#clear-btn {
   color: rgb(180, 0, 0);
+}
+
+button:active {
+  transform: translateY(3px);
 }
 
 #display-container {
@@ -47,8 +54,8 @@ h1 {
   height: 100px;
   border: 1px solid black;
   padding: 10px;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin-bottom: 5px;
   color: #1fc742;
-  background-color: #023612;
+  background-color: #005118;
 }
